WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280612
[WPE][GTK] visible rect in case animations is not correctly calculated
https://bugs.webkit.org/show_bug.cgi?id=280612
Summary
[WPE][GTK] visible rect in case animations is not correctly calculated
Przemyslaw Gorszkowski
Reported
2024-09-30 04:50:11 PDT
Created
attachment 472734
[details]
simplified example to reproduce the problem on RPi The original problem was observed on:
https://github.com/WebPlatformForEmbedded/WPEWebKit/issues/1379
. The main problem is that when we switch between the images(to the next on the right) in carousel (we see one full image - main image - and two partial images, on the left and on the right of the main image), the new main image initially (the first frame of animation) is not fully rendered (only first, left part is visible). The problem is not observed on x86 because the problem can be observed only on slow machines (e.g.: RPi 3). It can be observed also on x86 with some specific animations but if we record the playback and we can see the animation frame by frame - we can observe that first frame of animation is not fully rendered by only partially (as it was noticed on original application and RPi). I attached the html+css+js code of problematic case (simplified version of the original case from
https://smarttv.tg4.ie/
) - tg4-web-app.html(the problem reproduce on RPi), and tg4-web-app-simple.html, where I minimized the animation (translate3d) time from 300ms to 1ms and with this the problem can be also observed on x86 but only with recording and watching it in slow motion (or even frame by frame).
Attachments
simplified example to reproduce the problem on RPi
(7.79 KB, text/html)
2024-09-30 04:50 PDT
,
Przemyslaw Gorszkowski
no flags
Details
simplified example to reproduce the problem on x86
(6.95 KB, text/html)
2024-09-30 04:50 PDT
,
Przemyslaw Gorszkowski
no flags
Details
carousel before switch(x86)
(6.18 MB, image/png)
2024-09-30 05:33 PDT
,
Przemyslaw Gorszkowski
no flags
Details
partial_rendering_of_image(x86)
(7.87 MB, image/png)
2024-09-30 05:34 PDT
,
Przemyslaw Gorszkowski
no flags
Details
carousel after switch(x86)
(7.67 MB, image/png)
2024-09-30 05:34 PDT
,
Przemyslaw Gorszkowski
no flags
Details
minimal test case(x86, RPi)
(1.25 KB, text/html)
2024-10-01 05:13 PDT
,
Przemyslaw Gorszkowski
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Przemyslaw Gorszkowski
Comment 1
2024-09-30 04:50:42 PDT
Created
attachment 472735
[details]
simplified example to reproduce the problem on x86
Przemyslaw Gorszkowski
Comment 2
2024-09-30 05:33:46 PDT
Created
attachment 472737
[details]
carousel before switch(x86)
Przemyslaw Gorszkowski
Comment 3
2024-09-30 05:34:22 PDT
Created
attachment 472738
[details]
partial_rendering_of_image(x86)
Przemyslaw Gorszkowski
Comment 4
2024-09-30 05:34:49 PDT
Created
attachment 472739
[details]
carousel after switch(x86)
Przemyslaw Gorszkowski
Comment 5
2024-10-01 05:13:51 PDT
Created
attachment 472749
[details]
minimal test case(x86, RPi) I simplified as much as I could the test case which can be used to reproduce the problem on RPi or x86.
Przemyslaw Gorszkowski
Comment 6
2024-10-01 06:57:31 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34505
EWS
Comment 7
2024-10-07 05:22:01 PDT
Committed
284757@main
(7f5e13b54893): <
https://commits.webkit.org/284757@main
> Reviewed commits have been landed. Closing PR #34505 and removing active labels.
Radar WebKit Bug Importer
Comment 8
2024-10-07 05:23:16 PDT
<
rdar://problem/137420172
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug